src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-ofT-dwF1000-b-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    open-floating true\n    default-column-width { fixed 1000; }\n    border { on; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 1000 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]
